--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Generate Datas
 on:
   schedule: # execute every 12 hours
-    - cron: "* */0.5 * * *"
+    - cron: "0 */12 * * *"
   workflow_dispatch:
+
 jobs:
   build:
     name: Jobs to update datas
@@ -11,11 +12,12 @@ jobs:
       # Snake Animation
       - uses: Platane/snk@master
         id: snake-gif
-  
         with:
           github_user_name: junrdev
           svg_out_path: dist/github-contribution-grid-snake.svg
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
